# doc_rank/python-flask-server/swagger_server/controllers/parser.py
@@ -1,8 +1,6 @@
 import html2text
-import nltk
-import re
-import requests
 
+import requests
 
 class parser:
 
@@ -10,10 +8,29 @@ class parser:
         self.parser = html2text.HTML2Text()
         self.parser.ignore_links = True
         self.debug = debug
+        self.cookie = ""
 
     def log(self, *arg):
         if self.debug:
             print(arg)
+
+    def set_cookie(self, cookie):
+        self.cookie = cookie
+        self.log("new cookie = " + self.cookie)
+        return self.cookie
+
+    def get_wiki(self, url):
+        self.log("attempting to fetch wikis")
+        session = requests.Session()
+        cookie = self.cookie
+        if bool(cookie and cookie.strip()):
+            req = session.get(url, cookies={'cookie': cookie})
+            text = req.text
+            parsed = self.parser.handle(text)
+            return parsed
+        else:
+            self.log("""cookie is empty. please set cookie first by calling "actions/set/cookie""""")
+            return ""
 
     def get_text(self, url):
         self.log("attempting to parse html")
@@ -22,7 +39,11 @@ class parser:
         self.log("exiting with " + parsed)
         return parsed
 
+
+
+
 if __name__ == '__main__':
-    html_parser = parser(input("url? "))
-    html_parser.get_all_words()
+    html_parser = parser()
+    text = html_parser.get_wiki(input("url? "))
+    print(text)
 
